[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/environment/fire1.png" type="Texture" id=1]
[ext_resource path="res://Fire.gd" type="Script" id=2]
[ext_resource path="res://assets/environment/lignt1.png" type="Texture" id=3]
[ext_resource path="res://ui/Font.tres" type="DynamicFont" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 6 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.0198676, 0.331126, 0.635762, 1 )
colors = PoolColorArray( 0.167969, 0.100183, 0.0931702, 1, 0.277344, 0.170479, 0.149506, 1, 0.101562, 0.0654602, 0.0654602, 1, 0.458824, 0, 0, 0 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.331126, 0.807947, 1 )
colors = PoolColorArray( 0.872205, 0.953125, 0.156372, 1, 0.941406, 0.292782, 0.165482, 1, 0.550781, 0.0559387, 0.0559387, 1, 0.458824, 0, 0, 0 )

[sub_resource type="CircleShape2D" id=4]
radius = 23.7697

[node name="Fire" type="Node2D" groups=[
"fire",
]]
z_index = 10
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
z_as_relative = false
texture = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="SmokeParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, -13 )
rotation = -3.14159
emitting = false
amount = 15
lifetime = 0.7
randomness = 0.3
lifetime_randomness = 0.4
emission_shape = 1
emission_sphere_radius = 6.5
spread = 180.0
angular_velocity = 90.0
angular_velocity_random = 1.0
scale_amount = 2.5
scale_amount_random = 0.5
color_ramp = SubResource( 5 )

[node name="FireParticules" type="CPUParticles2D" parent="."]
position = Vector2( 0, -3 )
rotation = 3.14159
emitting = false
amount = 80
lifetime = 0.5
randomness = 0.3
lifetime_randomness = 0.4
emission_shape = 1
emission_sphere_radius = 5.0
spread = 180.0
angular_velocity = 90.0
angular_velocity_random = 1.0
scale_amount = 2.5
scale_amount_random = 0.5
color_ramp = SubResource( 3 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
texture = ExtResource( 3 )
energy = 0.53
shadow_enabled = true
shadow_buffer_size = 32

[node name="FireProximity" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FireProximity"]
shape = SubResource( 4 )

[node name="LifeLabel" type="Label" parent="."]
visible = false
margin_left = -15.0
margin_top = 9.0
margin_right = 25.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "Life : 10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="WoodLabel" type="Label" parent="."]
visible = false
margin_left = -43.0
margin_top = 19.0
margin_right = 55.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 4 )
text = "Press N to add Wood"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="FireProximity" to="." method="_on_FireProximity_body_entered"]
[connection signal="timeout" from="HealthTimer" to="." method="_on_HealthTimer_timeout"]
